# ai-core-kit

./: .env.example  .gitignore  README.md
go/: README.md  go.mod
go/cmd/cli/: main.go
go/internal/common/: config.go  http.go
go/internal/providers/: errors.go
go/internal/providers/openai/: embeddings.go  generate.go  structured.go
go/internal/rag/: chunking.go  rag_answer.go  vectorstore.go
go/sample_docs/: intro.txt
node/: README.md  package.json
node/sample_docs/: openai.md  rag.txt
node/src/: cli.mjs
node/src/common/: config.js
node/src/providers/openai/: embeddings.mjs  generate.mjs  structured.mjs
node/src/rag/: chunking.mjs  rag_answer.mjs  vectorstore.mjs
python/: README.md  pyproject.toml
python/src/cli/: main.py
python/src/common/: config.py
python/src/providers/openai/: embeddings.py  generate.py  structured.py
python/src/rag/: chunking.py  rag_answer.py  vectorstore.py
